# streamlit_chatbot_project

./: .gitignore  Makefile  README.md  pyproject.toml  setup_project.sh
config/: app_config.yaml
src/: chain.py  chatbot.py  config_loader.py  ui.py
